--- a/src/view/datetime.html
+++ b/src/view/datetime.html
@@ -22,6 +22,12 @@
             /*{if isset($format)}*/
             ,format:'{$format}'
             /*{/if}*/
+            /*{if isset($minTime)}*/
+            ,min:'{$minTime}'
+            /*{/if}*/
+            /*{if isset($maxTime)}*/
+            ,max:'{$maxTime}'
+            /*{/if}*/
         });
     });
 </script>
