--- a/src/view/iframe.html
+++ b/src/view/iframe.html
@@ -21,11 +21,11 @@
 <body >
 <!--{block name="header"}-->
 <!--{notempty name='title'}-->
-<!--{eq name="Think.get.open_type" value="open"}-->
+<!--{eq name="Request.get.open_type" value="open"}-->
 <div class="layui-card layui-bg-gray">
     <div class="layui-card-header notselect">
     <span class="layui-icon layui-icon-next font-s10 color-desc margin-right-5"></span>{$title|default=''}
-    <!--{if $Think.get.back eq 1}-->
+    <!--{if $Request.get.back eq 1}-->
     <button style="position:absolute;right:5px;top: 5px" class="layui-btn layui-btn-sm layui-bg-black"
             href="javascript:;" onclick="history.back();"><i class="layui-icon">&#xe65a;</i>{:lang('build_view_back_btn')}
     </button>
