--- a/src/view/echarts.html
+++ b/src/view/echarts.html
@@ -71,7 +71,7 @@
                 <div class="layui-form-item layui-inline">
                     <label class="layui-form-label">{:lang('build_view_please_date_range')}</label>
                     <div class="layui-input-inline">
-                        <input name="create_at" id="create_at" readonly value="{$Think.get.create_at}" placeholder="{:lang('build_view_please_select')}{:lang('build_view_please_date')}"
+                        <input name="create_at" id="create_at" readonly value="{$Request.get.create_at}" placeholder="{:lang('build_view_please_select')}{:lang('build_view_please_date')}"
                                class="layui-input">
                     </div>
                 </div>
