--- a/src/view/grid.html
+++ b/src/view/grid.html
@@ -1,6 +1,6 @@
 <!--{block name="header"}-->
 <!--{notempty name='title'}-->
-<!--{neq name="Think.get.open_type" value="modal"}-->
+<!--{neq name="Request.get.open_type" value="modal"}-->
 <div class="layui-card layui-bg-gray">
     <div class="layui-card-header notselect">
         <span class="layui-icon layui-icon-next font-s10 color-desc margin-right-5"></span>{$title|default=''}
@@ -38,7 +38,7 @@
              </li>
              </span>
             <!--{/if}-->
-            <!--{if $Think.get.back eq 1}-->
+            <!--{if $Request.get.back eq 1}-->
             <button  class="layui-btn layui-btn-sm layui-bg-black"
                      href="javascript:;" onclick="history.back();"><i class="layui-icon">&#xe65a;</i>{:lang('build_view_back_btn')}
             </button>
