--- a/src/view/BaiduMap.html
+++ b/src/view/BaiduMap.html
@@ -8,7 +8,7 @@
     </style>
     <link rel="stylesheet" href="/vendor/build-view/plugs/layui/css/layui.css">
     <link rel="stylesheet" href="/vendor/build-view/theme/css/console.css?at={:date('md')}">
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak={$ak}"></script>
+    <script type="text/javascript" src="//api.map.baidu.com/api?v=3.0&ak={$ak}"></script>
     <script src="/vendor/build-view/plugs/layui/layui.all.js"></script>
     <script src="/vendor/build-view/plugs/require/require.js"></script>
     <script src="/vendor/build-view/admin.js"></script>
