--- a/src/view/BaiduMap.html
+++ b/src/view/BaiduMap.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-<label class="layui-form-label">当前选择位置</label><div class="layui-input-inline"><input type="text" id="suggestId" class="layui-input" style="width: 690px"/></div>
+<label class="layui-form-label">当前选择位置</label><div class="layui-input-inline"><input type="text" id="suggestId" value="" class="layui-input" style="width: 690px"/></div>
 <div id="searchResultPanel" style="border:1px solid #C0C0C0;width:150px;height:auto; display:none;"></div>
 <button class="layui-btn layui-btn-normal layui-btn-fluid" type="button" id="submitBtn">确认</button>
 <div id="allmap" style="height: 86%"></div>
@@ -38,9 +38,33 @@
     map.setCurrentCity("北京");          // 设置地图显示的城市 此项是必须设置的
     map.enableScrollWheelZoom(true);     //开启鼠标滚轮缩放
     var geoc = new BMap.Geocoder();
+
+    function getQueryVariable(variable)
+    {
+        var query = window.location.search.substring(1);
+        var vars = query.split("&");
+        for (var i=0;i<vars.length;i++) {
+            var pair = vars[i].split("=");
+            if(pair[0] == variable){return pair[1];}
+        }
+        return(false);
+    }
+    address = decodeURIComponent(getQueryVariable('address'))
+   setTimeout(function () {
+       $('#suggestId').val(address);
+       $('#suggestId').blur();
+   },500)
+    geoc.getPoint(address, function(point){
+        lat = point.lat;
+        lng = point.lng;
+        setPlace();
+
+    });
+
     //点击事件
     map.addEventListener("click", showInfo);
     function showInfo(e){
+        console.log(123)
         var pt = e.point;
         lng = pt.lng;
         lat = pt.lat;
@@ -57,6 +81,7 @@
         {"input" : "suggestId"
             ,"location" : map
         });
+
     ac.addEventListener("onhighlight", function(e) {  //鼠标放在下拉列表上的事件
         var str = "";
         var _value = e.fromitem.value;
@@ -99,14 +124,18 @@
             onSearchComplete: myFun
         });
         local.search(address);
+
     }
     $('#submitBtn').click(function () {
         var res = [];
         res.lat = lat;
         res.lng = lng;
         res.address = address;
+        console.log(address)
         res.mark = '{$mark}';
         window.parent.postMessage(res, "/");
         parent.layer.close(parent.layer.getFrameIndex(window.name));
     })
+
+
 </script>
