--- a/src/view/form.html
+++ b/src/view/form.html
@@ -1,6 +1,7 @@
 <!--{block name="header"}-->
 <!--{notempty name='title'}-->
 <!--{neq name="Think.get.open_type" value="modal"}-->
+<!--{neq name="Think.get.open_type" value="full"}-->
 <div class="layui-card layui-bg-gray">
     <div class="layui-card-header notselect">
     <span class="layui-icon layui-icon-next font-s10 color-desc margin-right-5"></span>{$title|default=''}
@@ -12,6 +13,7 @@
     <!--{/if}-->
 </div>
 </div>
+<!--{/neq}-->
 <!--{/neq}-->
 <!--{/notempty}-->
 <!--{/block}-->
